@@ -10,6 +10,7 @@ import com.playmonumenta.plugins.depths.abilities.DepthsAbility;
 import com.playmonumenta.plugins.depths.abilities.DepthsAbilityInfo;
 import com.playmonumenta.plugins.depths.abilities.DepthsTrigger;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 
@@ -19,7 +20,6 @@ public class CurseOfEnvy extends DepthsAbility {
 	public static final DepthsAbilityInfo<CurseOfEnvy> INFO =
 		new DepthsAbilityInfo<>(CurseOfEnvy.class, ABILITY_NAME, CurseOfEnvy::new, DepthsTree.CURSE, DepthsTrigger.PASSIVE)
 			.displayItem(Material.APPLE)
-			.canBeOfferedPastFloor1(true)
 			.gain(CurseOfEnvy::gain)
 			.descriptions(CurseOfEnvy::getDescription);
 
@@ -32,7 +32,7 @@ public class CurseOfEnvy extends DepthsAbility {
 		if (dp == null) {
 			return;
 		}
-		dp.mEligibleTrees = Arrays.stream(DepthsTree.OWNABLE_TREES).filter(tree -> !dp.mEligibleTrees.contains(tree)).toList();
+		dp.mEligibleTrees = Arrays.stream(DepthsTree.OWNABLE_TREES).filter(tree -> !dp.mEligibleTrees.contains(tree)).collect(Collectors.toList());
 	}
 
 	private static Description<CurseOfEnvy> getDescription() {
